ags (3.2.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* TODO:JK: implemented AgsFunction and related
	* TODO:JK: improve AgsComplex support
	* TODO:JK: added to AgsGui getter and setter functions
	* implemented some getter and setter functions
	* updated developer manual
	* minor improvements

ags (3.1.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed potential integer overflow in ags_osc_front_controller_do_request()
	* minor improvements

ags (3.1.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_automation_meta.c channel_type variable to use proper GType

ags (3.1.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* updated user manual

ags (3.1.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* work-in-progress implemented getter and setter functions of properties
	* implemented meta widget of AgsNotationEditor
	* implemented meta widget of AgsAutomationEditor
	* implemented meta widget of AgsWaveEditor
	* implemented acoustic feedback of ags-recall-dssi
	* implemented acoustic feedback of ags-recall-lv2
	* fixed ref-count of AgsRecallDssi:count-beats-audio-run
	* fixed AgsAutomationEdit not shown again
	* fixed AgsAutomationEdit cursor x-position
	* added missing gtk-doc to ags_audio_buffer_util.c

ags (3.0.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* replaced UTF-8 character sequence from build files
	* added missing parantheses in configure.ac
	* wiped m4 directory and recreated it

ags (3.0.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved unit-tests to call ags_priority_load_defaults()

ags (3.0.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed broken WebKit2Gtk-4.0 configure

ags (3.0.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented disable realtime priorities by AgsPriority

ags (3.0.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]