@@ -174,7 +174,13 @@ xmlNode* ags_midi_parser_sequencer_meta_event(AgsMidiParser *midi_parser, guint 
 xmlNode* ags_midi_parser_meta_misc(AgsMidiParser *midi_parser, guint meta_type);
 xmlNode* ags_midi_parser_text_event(AgsMidiParser *midi_parser, guint meta_type);
 
+/*  */
+void ags_midi_parser_open_filename(AgsMidiParser *midi_parser,
+				   gchar *filename);
+
+/* instantiate */
 AgsMidiParser* ags_midi_parser_new(FILE *file);
+AgsMidiParser* ags_midi_parser_new_from_filename(gchar *filename);
 
 G_END_DECLS
 
